# ptdeco

./: .gitignore  CHANGELOG.md  Makefile  Makefile.inc  README.md  TODO.md  pyproject.toml  requirements-check.txt  requirements-dev.txt  requirements-test.txt  setup.py
.github/workflows/: check.yml  test.yml
aux/: block_empty_commit.sh  fix.sh  get_version.py  update_version.py
examples/trainer_advanced/: .gitignore  Makefile  builder.py  configurator.py  datasets_dali.py  models.py  nb_deco_timing_analysis.py  run.py  run_decompose_fal.py  run_decompose_falor.py  run_decompose_lockd.py  run_decompose_trainable.py  run_finetune.py  run_train_decomposed.py  train.py  train_decomposed.py  train_direct.py  version.py
examples/trainer_llm/: Makefile  builder.py  configurator.py  datasets_hf.py  dwain_wrapper_module.py  dwain_wrpper_module.py  metrics.py  requirements.txt  run.py  run_decompose_dwain.py  run_finetune.py  utils.py  version.py
examples/trainer_vision/: .gitignore  Makefile  builder.py  configurator.py  datasets_dali.py  dwain_wrapper_module.py  metrics.py  requirements.txt  requirements_dali.txt  run.py  run_decompose_dwain.py  run_decompose_falor.py  run_decompose_lockd.py  run_finetune.py  version.py
ptdeco/: __init__.py  _version.py  common.py  direct.py  fal.py  modconfig.py  ptdeco.py
ptdeco/falor/: __init__.py  decomposition.py  (+1 more)
tests/: helpers.py  test_config_torchvision_timm.py  test_deco_primitives_dwain.py  test_deco_primitives_falor.py  test_decompose_torchvision_timm.py  test_losses_torchvision_timm.py  test_wrap_torchvision_timm.py
(+35 files in other folders)
